More text for html page

--- a/Stalker/scriptDemo.html
+++ b/Stalker/scriptDemo.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>This page runs java script</h1>
+<h2>also, this is now mirrored on Github.</h2>
 
 <script src="script.js"></script>
 </body>
